<resources>
	<string name="app_name">Cricket Score Card</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_drawer_home">Home</string>
	<string name="nav_drawer_manage_team">Manage Team</string>
	<string name="nav_drawer_manage_player">Manage Player</string>
	<string name="nav_drawer_new_match">Play New Match</string>
	<string name="nav_header_title">Score Card</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="nav_header_limitedOvers">Limited Overs</string>
	<string name="title_activity_manage_player">Manage Player</string>
	<string name="title_activity_score_card">Score Card</string>
	<string name="title_fragment_limited_overs">Match Card</string>
	<string name="title_fragment_match_summary">Match Summary</string>
	<string name="title_fragment_new_match">New Match</string>
	<string name="title_fragment_manage_player">Manage Player</string>
	<string name="title_fragment_manage_team">Manage Team</string>
	<string name="action_settings">Settings</string>
	<string name="finishedMatches">Finished</string>
	<string name="manage">Manage</string>
	<string name="team">Team</string>
	<string name="player">Player</string>
	<string name="bowlerHurt">Bowler Hurt</string>
	<string name="undo">Undo Last Ball</string>
	<string name="load">Load Match</string>
	<string name="saveMatch">Save Match</string>
	<string name="changeFacing">Change Facing Batsman</string>
	<string name="batsmanHurt">Batsman Hurt</string>
	<string name="clearFinishedMatches">Clear Finished Matches</string>
	<string name="changeTheme">Change Theme</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="save">Save</string>
	<string name="delete">Delete</string>
	<string name="reset">Reset</string>
	<string name="clear">Clear</string>
	<string name="goBack">Back</string>
	<string name="none">None</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="upload">Upload</string>
	<string name="text">Name/Value</string>
	<string name="quit">Quit</string>
	<string name="other">Other</string>
	<string name="limited_overs_cricket">Limited Overs</string>
	<string name="test_cricket">Test Cricket</string>
	<string name="defaultScore">0/0</string>
	<string name="tvScoreText">Score: </string>
	<string name="defaultOvers">0.0</string>
	<string name="tvRRText">CRR: </string>
	<string name="tvRRRText">RRR: </string>
	<string name="tvOversText"> (%1$s)</string>
	<string name="defaultMaxOvers">50</string>
	<string name="tvTargetText">Target: </string>
	<string name="notApplicable">N/A</string>
	<string name="headerBatsman">Batsman</string>
	<string name="headerRuns">R</string>
	<string name="headerBalls">B</string>
	<string name="headerFours">4s</string>
	<string name="headerSixes">6s</string>
	<string name="headerStrikeRate">SR</string>
	<string name="headerBowler">Bowler</string>
	<string name="headerOvers">O</string>
	<string name="headerMaidens">M</string>
	<string name="headerWickets">W</string>
	<string name="headerEconomy">ER</string>
	<string name="extrasText"><b>Extras :\t</b></string>
	<string name="legByes">Lb - %1$d</string>
	<string name="byes">B - %1$d</string>
	<string name="wides">Wd - %1$d</string>
	<string name="noBalls">Nb - %1$d</string>
	<string name="penalty"> | Penalty - %1$d</string>
	<string name="zero">0</string>
	<string name="one">1</string>
	<string name="two">2</string>
	<string name="three">3</string>
	<string name="four">4</string>
	<string name="six">6</string>
	<string name="wicket">W</string>
	<string name="btnLegByeText">Lb</string>
	<string name="btnByeText">B</string>
	<string name="btnWideText">Wd</string>
	<string name="btnNoBallText">N</string>
	<string name="selBatsman">Select Next Batsman</string>
	<string name="selBowler">Select Next Bowler</string>
	<string name="selFacingBatsman">Confirm Facing Batsman</string>
	<string name="startNextInnings">Start Next Innings</string>
	<string name="runsInBalls">%1$s need %2$d runs in %3$d balls</string>
	<string name="outBatsmanData">%s %s %s %s</string>
	<string name="inningsComplete">Innings Complete</string>
	<string name="oversLeft">Overs Left</string>
	<string name="runsInOver">%1$d run(s) scored this over</string>
	<string name="enterRuns">Enter Runs</string>
	<string name="moreRuns">More Runs</string>
	<string name="poMFrom">Player of the Match From</string>
	<string name="tvPoMData">Player of Match: %1$s</string>
	<string name="completeMatch">Finish Match</string>
	<string name="closeMatch">Complete</string>
	<string name="extrasDialogTitle">Select Runs</string>
	<string name="extrasDialogTitleAdditional">Select Additional Runs</string>
	<string name="extrasDialogTitleBatsman">Select Batsman Runs</string>
	<string name="btnPenaltyText">P</string>
	<string name="extraDialogTitlePenalty">Select Awarded to</string>
	<string name="extraNBText">Bye/LegBye for No-Ball?</string>
	<string name="extraNBNone">None</string>
	<string name="extraNBBye">Bye</string>
	<string name="extraNBLegBye">Leg-Bye</string>
	<string name="wicket_caught">Caught</string>
	<string name="wicket_bowled">Bowled</string>
	<string name="wicket_lbw">LBW</string>
	<string name="wicket_stump">Stumped Out</string>
	<string name="wicket_runOut">Run Out</string>
	<string name="wicket_hitWicket">Hit Wicket</string>
	<string name="wicket_obstruct">Obstructing Field</string>
	<string name="wicket_retired">Retired</string>
	<string name="wicket_hitTwice">Hit Twice</string>
	<string name="wicket_timedOut">Timed Out</string>
	<string name="wide">Wide</string>
	<string name="bye">Bye</string>
	<string name="legBye">Leg-Bye</string>
	<string name="noBall">No-Ball</string>
	<string name="wicketDetails">Wicket Details</string>
	<string name="onlyNoBall">Only NoBall</string>
	<string name="noBallAndByes">NoBall + Byes</string>
	<string name="noBallAndLB">NoBall + LegByes</string>
	<string name="isExtra">Is Extra?</string>
	<string name="runsScored">Runs Scored = %1$d</string>
	<string name="caughtBy">Caught By</string>
	<string name="runOutBy">Run Out By</string>
	<string name="batsmanOutText">Batsman?</string>
	<string name="playerName">Name</string>
	<string name="playerAge">Age</string>
	<string name="playerBattingStyle">Batting Style</string>
	<string name="playerBowlingStyle">Bowling Style</string>
	<string name="isPlayerWK">is Wicket Keeper?</string>
	<string name="managePlayer">Manage</string>
	<string name="selectBatStyle">Click to Select Batting Style</string>
	<string name="selectBowlStyle">Click to Select Bowling Style</string>
	<string name="getPlayerList">Get Player List</string>
	<string name="noPlayersFound">No Players Found</string>
	<string name="playerData">Player</string>
	<string name="players">Player Count</string>
	<string name="style">Style</string>
	<string name="batStyle">Bat</string>
	<string name="bowlStyle">Bowl</string>
	<string name="isWK">is WK?</string>
	<string name="updateTeams">Update Teams</string>
	<string name="enterMatchName">Match Name</string>
	<string name="matchNameCD">Match Name</string>
	<string name="team1">Team-1</string>
	<string name="team2">Team-2</string>
	<string name="selectTeam">Select\nTeam</string>
	<string name="validate">Validate</string>
	<string name="maxOvers">Max Overs</string>
	<string name="maxWickets">Max Wickets</string>
	<string name="maxOversPerBowler">Max per Bowler</string>
	<string name="maxOversValue">50</string>
	<string name="maxWicketsValue">10</string>
	<string name="numPlayers">Player Count</string>
	<string name="matchData">Match</string>
	<string name="loadMatch">Load</string>
	<string name="tossWonBy">Toss Won By</string>
	<string name="choose">Choose</string>
	<string name="batting">Bat</string>
	<string name="bowling">Bowl</string>
	<string name="notEnoughPlayers">Not Enough Players to Select</string>
	<string name="captainName"><b>Captain : </b>%1$s</string>
	<string name="wkName"><b>WK : </b>%1$s</string>
	<string name="deleteMatches">Delete</string>
	<string name="addNewTeam">Add Team</string>
	<string name="newMatch">New</string>
	<string name="startMatch">Start Match</string>
	<string name="updateTeamPlayers">Update Players</string>
	<string name="manageTeam">Manage</string>
	<string name="teamName">Team Name</string>
	<string name="teamShortName">Short Name</string>
	<string name="noTeamsFound">No Teams Found</string>
	<string name="getTeamList">Get Team List</string>
	<string name="updatePlayers">Update Players</string>
	<string name="teamCount">Team Count</string>
	<string name="teamData">Team</string>
	<string name="tabInningsText">%s Inns</string>
	<string name="scoreCard">Score Card</string>
	<string name="overGraph">Manhattan</string>
	<string name="partnershipGraph">Partnership</string>
	<string name="runRateGraph">Worm</string>
	<string name="graph">Graphs</string>
	<string name="selectInnings">Choose Innings</string>
	<string name="playerScore">%1$d(%2$d)</string>
	<string name="title_question_list">Question</string>
	<string name="title_question_detail">Question Detail</string>
	<string name="nav_drawer_info">Help</string>
	<string name="newTournament">New</string>
	<string name="loadTournament">Ongoing</string>
	<string name="finishedTournament">Finished</string>
	<string name="tournament">Tournament</string>
	<string name="tournamentName">Tournament Name</string>
	<string name="roundRobin">Round Robin</string>
	<string name="groups">Groups</string>
	<string name="tournamentFormat">Tournament Format: </string>
	<string name="selectTeams">Select Teams</string>
	<string name="selectedTeams">Selected Teams : </string>
	<string name="numGroups">Num. of Groups</string>
	<string name="tournamentStages">Tournament Stages : </string>
	<string name="superFourStage">Super Four</string>
	<string name="knockOut">Knock Out</string>
	<string name="qualifiers">Qualifier-Eliminator</string>
	<string name="superSixStage">Super Six</string>
	<string name="matchInfo">Schedule</string>
	<string name="manageGroups">View/Edit Groups</string>
	<string name="selectedTeamsCount">Num. of Teams : </string>
	<string name="numTeams">Num. of Teams</string>
	<string name="bilateral">Bilateral</string>
	<string name="confirm">Confirm</string>
	<string name="numRounds">Num. of Rounds</string>
	<string name="numMatches">Num. of Matches</string>
	<string name="tournamentTeamSizePrefix">Team Size :</string>
	<string name="tournamentFormatPrefix">Format :</string>
	<string name="tournamentCreatedDate">Created at :</string>
	<string name="help">Help</string>
	<string name="reOrderGroups">Reorder Groups</string>
	<string name="title_fragment_new_tournament">New Tournament</string>
	<string name="title_fragment_tournament_schedule">Schedule</string>
	<string name="next">Next</string>
	<string name="start">Start</string>
	<string name="previous">Previous</string>
	<string name="title_fragment_tournament_groups">Groups</string>
	<string name="title_activity_tournament">Tournament</string>
	<string name="tournamentSchedule">Schedule</string>
	<string name="tournamentPoints">Points</string>
	<string name="abandon">Abandon Match</string>
	<string name="reOrderSchedule">Reorder Schedule</string>
	<string name="toss">Toss</string>
	<string name="setMatchData">Set Match Data</string>
	<string name="title_activity_tournament_complete">TournamentCompleteActivity</string>
	<string name="dummy_button">Dummy Button</string>
	<string name="dummy_content">DUMMY\nCONTENT</string>
	<string name="tournamentWinner">Tournament Winner\n%s</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="scoringButtons">ScoringButtons</string>
	<string name="cancelRuns">Cancel Runs</string>
	<string name="addPenalty">Add Penalty</string>
	<string name="gamePlay">Game</string>
	<string name="runs">Runs</string>
</resources>