<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_save" app:showAsAction="ifRoom" android:icon="@drawable/ic_save" android:title="@string/saveMatch"/>
    <item android:id="@+id/menu_scoreCard" app:showAsAction="never" android:icon="@drawable/ic_card" android:title="@string/scoreCard"/>
    <item android:id="@+id/menu_show_graph" app:showAsAction="never" android:icon="@drawable/ic_graph" android:title="@string/graph"/>

    <!-- Game Items -->
    <item app:showAsAction="never" android:title="@string/gamePlay">
        <menu>
            <item android:id="@+id/menu_undo" app:showAsAction="never" android:icon="@drawable/ic_undo" android:title="@string/undo"/>
            <item android:id="@+id/menu_load" app:showAsAction="never" android:icon="@drawable/ic_download" android:title="@string/load"/>
            <item android:id="@+id/menu_abandon" android:icon="@drawable/ic_force_stop" android:title="@string/abandon" app:showAsAction="never" />
        </menu>
    </item>

    <!-- Player Items -->
    <item app:showAsAction="never" android:title="@string/player">
        <menu>
            <item android:id="@+id/menu_change_facing" app:showAsAction="never" android:icon="@drawable/ic_download" android:title="@string/changeFacing"/>
            <item android:id="@+id/menu_batsman_hurt" app:showAsAction="never" android:icon="@drawable/ic_download" android:title="@string/batsmanHurt"/>
            <item android:id="@+id/menu_bowler_hurt" app:showAsAction="never" android:icon="@drawable/ic_download" android:title="@string/bowlerHurt"/>
        </menu>
    </item>

    <!-- Runs Items -->
    <item app:showAsAction="never" android:title="@string/runs">
        <menu>
            <item android:id="@+id/menu_cancel_runs" android:title="@string/cancelRuns" app:showAsAction="never" />
            <item android:id="@+id/menu_penalty" android:title="@string/addPenalty" app:showAsAction="never" />
        </menu>
    </item>

	<item
		android:id="@+id/menu_quit"
		android:icon="@drawable/ic_stop"
		android:title="@string/quit"
		app:showAsAction="never" />
</menu>