<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:showIn="navigation_view">

	<group android:checkableBehavior="single">
		<item
			android:id="@+id/nav_home"
			android:icon="@drawable/ic_home"
			android:title="@string/nav_drawer_home" />
		<item
			android:id="@+id/nav_manage_player"
			android:icon="@drawable/ic_person"
			android:title="@string/nav_drawer_manage_player" />
		<item
			android:id="@+id/nav_manage_team"
			android:icon="@drawable/ic_people"
			android:title="@string/nav_drawer_manage_team" />
		<item
			android:id="@+id/nav_new_match"
			android:icon="@drawable/ic_add_screen"
			android:title="@string/nav_drawer_new_match" />
		<item
			android:id="@+id/nav_help"
			android:icon="@drawable/ic_help"
			android:title="@string/nav_drawer_info" />
	</group>

</menu>
